# chan_month5

./: .gitignore  AGENTS.md  _write_rust_shadow.py  a_quick_guide.md  a_replay_trainer.py  a_replay_trainer_操作说明.md  a_tmp_debug_train.py  cursor_insights_from_chan_py.md  replay_trainer.py
CHAN_RUST/rust/: Cargo.toml
CHAN_RUST/rust/chan_data/: Cargo.toml
CHAN_RUST/rust/chan_data/src/: bsp.rs  combine.rs  engine.rs  error.rs  feature.rs  kline.rs  kuaduan.rs  lib.rs  offline.rs  pipeline.rs  seg_eigen.rs  segment_first.rs  tick.rs  zs.rs
CHAN_RUST/rust/chan_ffi/: Cargo.toml
CHAN_RUST/rust/chan_ffi/src/: lib.rs
CHAN_RUST/rust/target_alt/: .rustc_info.json
CHAN_RUST/rust/target_alt/debug/.fingerprint/autocfg-8c965f4063c10cfd/: lib-autocfg
CHAN_RUST/rust/target_alt/debug/.fingerprint/cfg-if-50da2642d7d10359/: lib-cfg_if.json
CHAN_RUST/rust/target_alt/debug/.fingerprint/chan_data-0535f7af2278131e/: dep-lib-chan_data  output-lib-chan_data
CHAN_RUST/rust/target_alt/debug/.fingerprint/chan_data-6798156f2d578701/: dep-test-lib-chan_data  output-test-lib-chan_data  test-lib-chan_data
CHAN_RUST/rust/target_alt/debug/.fingerprint/chrono-6fb12946b32102b8/: lib-chrono
CHAN_RUST/rust/target_alt/debug/.fingerprint/encoding_rs-6668f9a3bfbb9061/: lib-encoding_rs  lib-encoding_rs.json
CHAN_RUST/rust/target_alt/release/: chan_compare.d  chan_ffi.d
a_rust_core/: Cargo.toml  pyproject.toml
a_rust_core/chan-core/: Cargo.toml
a_rust_core/chan-core/src/: bi.rs  config.rs  enums.rs  kline.rs  lib.rs  seg.rs  state.rs  zs.rs
a_rust_core/src/: lib.rs
(+7504 files in other folders)
