[workspace]
members = [".", "chan-core"]
resolver = "2"

[package]
name = "a_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "a_rust_core_ext"
crate-type = ["cdylib"]

[dependencies]
chan-core = { path = "chan-core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
